--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ node_js:
 
 script:
         - pushd cron4j-original && ant rel && popd
-	-pushd cron4j-orginal && pushd cron4j && mvn clean verify 
+	- pushd cron4j-mvn && pushd cron4j && mvn clean verify 
